--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Update IP List
 
 on:
-  #schedule:
-    #- cron: '0 */3 * * *' # 每3小时运行一次
+  schedule:
+    - cron: '0 */3 * * *' # 每3小时运行一次
   workflow_dispatch: # 允许手动触发
   #push: # 允许提交触发
 
@@ -28,7 +28,7 @@ jobs:
     - name: Run script
       run: python ${{ github.workspace }}/collect_ips.py
         
-    - name: Commit and push changes
+    - name: Commit 和 push changes
       run: |
         git config --global user.email "tianshideyou@proton.me"
         git config --global user.name "tianshipapa"
